# restapi/operations/create_execution_environment_responses.go
@@ -7,7 +7,95 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/runtime"
+
+	"omi-gitlab.e-technik.uni-ulm.de/vice/vice-api/models"
 )
+
+// CreateExecutionEnvironmentCreatedCode is the HTTP code returned for type CreateExecutionEnvironmentCreated
+const CreateExecutionEnvironmentCreatedCode int = 201
+
+/*CreateExecutionEnvironmentCreated Created
+
+swagger:response createExecutionEnvironmentCreated
+*/
+type CreateExecutionEnvironmentCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ExecutionEnvironment `json:"body,omitempty"`
+}
+
+// NewCreateExecutionEnvironmentCreated creates CreateExecutionEnvironmentCreated with default headers values
+func NewCreateExecutionEnvironmentCreated() *CreateExecutionEnvironmentCreated {
+	return &CreateExecutionEnvironmentCreated{}
+}
+
+// WithPayload adds the payload to the create execution environment created response
+func (o *CreateExecutionEnvironmentCreated) WithPayload(payload *models.ExecutionEnvironment) *CreateExecutionEnvironmentCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create execution environment created response
+func (o *CreateExecutionEnvironmentCreated) SetPayload(payload *models.ExecutionEnvironment) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateExecutionEnvironmentCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateExecutionEnvironmentUnauthorizedCode is the HTTP code returned for type CreateExecutionEnvironmentUnauthorized
+const CreateExecutionEnvironmentUnauthorizedCode int = 401
+
+/*CreateExecutionEnvironmentUnauthorized Authentication information is missing or invalid
+
+swagger:response createExecutionEnvironmentUnauthorized
+*/
+type CreateExecutionEnvironmentUnauthorized struct {
+	/*
+	  Required: true
+	*/
+	WWWAuthenticate string `json:"WWW_Authenticate"`
+}
+
+// NewCreateExecutionEnvironmentUnauthorized creates CreateExecutionEnvironmentUnauthorized with default headers values
+func NewCreateExecutionEnvironmentUnauthorized() *CreateExecutionEnvironmentUnauthorized {
+	return &CreateExecutionEnvironmentUnauthorized{}
+}
+
+// WithWWWAuthenticate adds the wWWAuthenticate to the create execution environment unauthorized response
+func (o *CreateExecutionEnvironmentUnauthorized) WithWWWAuthenticate(wWWAuthenticate string) *CreateExecutionEnvironmentUnauthorized {
+	o.WWWAuthenticate = wWWAuthenticate
+	return o
+}
+
+// SetWWWAuthenticate sets the wWWAuthenticate to the create execution environment unauthorized response
+func (o *CreateExecutionEnvironmentUnauthorized) SetWWWAuthenticate(wWWAuthenticate string) {
+	o.WWWAuthenticate = wWWAuthenticate
+}
+
+// WriteResponse to the client
+func (o *CreateExecutionEnvironmentUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header WWW_Authenticate
+
+	wWWAuthenticate := o.WWWAuthenticate
+	if wWWAuthenticate != "" {
+		rw.Header().Set("WWW_Authenticate", wWWAuthenticate)
+	}
+
+	rw.WriteHeader(401)
+}
 
 // CreateExecutionEnvironmentMethodNotAllowedCode is the HTTP code returned for type CreateExecutionEnvironmentMethodNotAllowed
 const CreateExecutionEnvironmentMethodNotAllowedCode int = 405
