# swagger.yaml
@@ -5,7 +5,7 @@ info:
   version: "0.1"
   contact:
     name: christopher.hauser@uni-ulm.de
-host: vice.anyops.org
+host: localhost:8080
 schemes:
   - http
 basePath: /v1
@@ -36,10 +36,10 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+        401:
+          $ref: "#/responses/UnauthorizedError"            
       security:
-        - vice_auth:
-          - import_images
-          - deploy_images
+        - vice_auth: []
           
     post:
       summary: Create a new execution environment for authenticated user
@@ -55,12 +55,16 @@ paths:
         - application/json
         - application/xml
       responses:
-        "405":
+        201:
+          description: Created
+          schema:
+            $ref: "#/definitions/ExecutionEnvironment"      
+        405:
           description: Invalid input
+        401:
+          $ref: "#/responses/UnauthorizedError"          
       security:
-        - vice_auth:
-          - import_images
-          - deploy_images
+        - vice_auth: []
 
     put:
       summary: Update an existing execution environment
@@ -76,16 +80,16 @@ paths:
         - application/json
         - application/xml
       responses:
-        "405":
+        405:
           description: Validation exception
-        "404":
+        404:
           description: Execution Environment not found
-        "400":
+        400:
           description: Invalid ID supplied
+        401:
+          $ref: "#/responses/UnauthorizedError"          
       security:
-        - vice_auth:
-          - import_images
-          - deploy_images       
+        - vice_auth: []    
           
   /executionenvironment/{executionenvironmentId}:
     get:
@@ -97,18 +101,18 @@ paths:
           required: true
           type: integer
       responses:
-        "404":
+        404:
           description: Execution environment not found
-        "200":
+        200:
           description: successful operation
           schema:
             $ref: "#/definitions/ExecutionEnvironment"
-        "400":
+        400:
           description: Invalid ID supplied
+        401:
+          $ref: "#/responses/UnauthorizedError"          
       security:
-        - vice_auth:
-          - import_images
-          - deploy_images    
+        - vice_auth: []    
 
     delete:
       summary: Deletes an execution environment
@@ -120,12 +124,12 @@ paths:
           required: true
           type: integer
       responses:
-        "400":
+        400:
           description: Invalid ID supplied
+        401:
+          $ref: "#/responses/UnauthorizedError"
       security:
-        - vice_auth:
-          - import_images
-          - deploy_images   
+        - vice_auth: []
 
   /images:
     get:
@@ -145,12 +149,7 @@ paths:
 
 securityDefinitions:
   vice_auth:
-    type: oauth2
-    authorizationUrl: http://petstore.swagger.io/api/oauth/dialog
-    flow: implicit
-    scopes:
-      import_images: import images from execution environments
-      deploy_images: deploy images into execution environments
+    type: basic
 
 definitions:
   ExecutionEnvironment:
@@ -185,6 +184,8 @@ definitions:
       id:
         type: integer
       username:
+        type: string
+      password:
         type: string
 
   RuntimeTechnology:
@@ -228,4 +229,11 @@ definitions:
       message:
         type: string
       fields:
+        type: string
+
+responses:
+  UnauthorizedError:
+    description: Authentication information is missing or invalid
+    headers:
+      WWW_Authenticate:
         type: string
